Changes and cleanup after moving compiler interfaces to use the new com.oracle.truffle.compiler package.